completed the responsive vertical accordion. Fixed the rollover for the accordion tabs. Also fixed the issue in safari where the image in the accordion takes up the whole accordion. Fixed the Safari bug with tabs being cut off

--- a/wp-content/plugins/accordionpro_wp/css/accordionpro.css
+++ b/wp-content/plugins/accordionpro_wp/css/accordionpro.css
@@ -80,7 +80,7 @@
 
 /**************************************** Options */
 /* responsive */
-.accordionPro.scaleImages .slide > div img { width: 100%; height: 100% }
+.accordionPro.scaleImages .slide > div img { width: 100%; /*height: 100%;*/ }
 
 /* vertical fitToContent */
 .accordionPro.vertical.fitToContent .slide > div { overflow: visible; height: auto }
